# vigil-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  digits.rs  launch.rs  layout.rs  lib.rs  main.rs  nav.rs  theme.rs
src/widget/: clock.rs  date.rs  mod.rs  system.rs  text.rs  weather.rs
