[package]
name = "vigil-tui"
version = "0.1.0"
edition = "2024"
description = "A configurable terminal dashboard with clock, weather, system stats, and more"
license = "MIT"
readme = "config.example.toml"

[dependencies]
anyhow = "1"
dirs = "6"
chrono = "0.4"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
